[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://p3j7bhealr6m" path="res://scripts/GameplayUI.gd" id="1_gameplayui"]

[node name="GameplayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false
script = ExtResource("1_gameplayui")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
anchor_right = 0.3
anchor_bottom = 0.1
theme_override_font_sizes/font_size = 48
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChainLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.1
theme_override_font_sizes/font_size = 48
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "Chain: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JudgementLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = -100.0
offset_right = 100.0
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="JudgementImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 0.0
offset_top = 288.0
offset_right = 414.0
offset_bottom = 480.0
expand_mode = 1
stretch_mode = 4
